src/c/x509/X520countryName.h

/*
 * Generated by asn1c-0.9.23 (http://lionet.info/asn1c)
 * From ASN.1 module "PKIX1Explicit88"
 * 	found in "../../../asn.1/rfc3280-PKIX1Explicit88.asn"
 */

#ifndef	_X520countryName_H_
#define	_X520countryName_H_


#include <asn_application.h>

/* Including external dependencies */
#include <PrintableString.h>

#ifdef __cplusplus
extern "C" {
#endif

/* X520countryName */
typedef PrintableString_t	 X520countryName_t;

/* Implementation */
extern asn_TYPE_descriptor_t asn_DEF_X520countryName;
asn_struct_free_f X520countryName_free;
asn_struct_print_f X520countryName_print;
asn_constr_check_f X520countryName_constraint;
ber_type_decoder_f X520countryName_decode_ber;
der_type_encoder_f X520countryName_encode_der;
xer_type_decoder_f X520countryName_decode_xer;
xer_type_encoder_f X520countryName_encode_xer;

#ifdef __cplusplus
}
#endif

#endif	/* _X520countryName_H_ */
#include <asn_internal.h>